# fitter

./: .gitignore  pyproject.toml
src/fitter/: fitter.py
