[tool.poetry]
name = "fitter"
version = "2.0.0dev0"
description = "A tool to fit data to many distributions and get the best one(s)"
authors = ["Thomas Cokelaer <cokelaer@gmail.com>"]
license = "GPL"
readme = "README.rst"
keywords = ["fit", "distribution", "fitting", "scipy"]
classifiers = [
        "Private :: Do Not Upload",
        "Intended Audience :: Education",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.12",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Scientific/Engineering :: Information Analysis",
]



[tool.poetry.dependencies]
python = ">=3.12,<3.13"
click = ">=8.2.0"
joblib = ">=1.5.0"
matplotlib = ">=3.10.0"
numpy = ">=2.3.0, <3.0.0"
pandas = ">= 2.3.0, <3.0.0"
scipy = ">=1.16.0, <2.0.0"
tqdm = ">=4.67.0"
rich-click = ">=1.8.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-xdist = "^3.8.0"
pytest-mock = "^3.15.0"
pytest-timeout = "^2.4.0"
coveralls = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fitter = "fitter.main:main"


